--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTA5NzIwNzg2NDUxNjQxNTU5OA.G_LB6_.JZthzYBrZ6-ow3vUEAahYsKfoin_XwOX68ekb8",
+    "token": "MTA5NzIwNzg2NDUxNjQxNTU5OA.GhXPlz.eTXy-TfkY4UStfKnWDMmfyW4wy4zsql-IFexFg",
     "guid" : "1097207462148440274",
     "botname" : "IGon",
     "logfile" : "log.txt",
